helm/ext-coredns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ext-coredns
---
apiVersion: v1
kind: Service
metadata:
  name: ext-coredns
  namespace: ext-coredns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ns.k.maelvls.dev
spec:
  type: LoadBalancer
  selector:
    app: ext-coredns
  ports:
    - port: 53
      protocol: UDP
      name: udp-53
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ext-coredns
  namespace: ext-coredns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ext-coredns
  template:
    metadata:
      labels:
        app: ext-coredns
    spec:
      serviceAccountName: ext-coredns
      dnsPolicy: ClusterFirst
      containers:
        - name: "coredns"
          image: "quay.io/oriedge/k8s_gateway"
          imagePullPolicy: IfNotPresent
          args: ["-conf", "/etc/coredns/Corefile"]
          volumeMounts:
            - name: config-volume
              mountPath: /etc/coredns
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
          ports:
            - { containerPort: 53, protocol: UDP, name: udp-53 }
            - { containerPort: 53, protocol: TCP, name: tcp-53 }
      volumes:
        - name: config-volume
          configMap:
            name: ext-coredns
            items:
              - key: Corefile
                path: Corefile
